# phoebe

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: config.py
src/agent/: agent.py  prompt.py
src/arena/: context.py  models.py  scorer.py  server.py  store.py  taxonomy.py
src/clickhouse/: clickhouse.py
src/osprey/: osprey.py
src/ozone/: ozone.py
src/safety/: classifier.py  erc8004.py  monitor.py  osprey_client.py  tee_classifier.py
src/tools/: __init__.py  executor.py  registry.py
src/tools/definitions/: attack.py  bounty.py  clickhouse.py  domain.py  novelty.py  osprey.py  safety.py  target.py
src/tools/deno/: tools.ts
src/ui/: dashboard.html
src/x402/: __init__.py  client.py  wallet.py
